Hotfix - fixed styles in contact, there were unnecessary paddings on mobile

--- a/UFArt/wwwroot/css/style.css
+++ b/UFArt/wwwroot/css/style.css
@@ -88,6 +88,16 @@
         width: 49.5%;
         display: inline-block;
     }
+
+    #contact-column-left {
+        padding-top: 1rem;
+        padding-right: 1.25rem;
+    }
+
+    #contact-column-right {
+        padding-top: 1rem;
+        padding-left: 1.25rem;
+    }
 }
 
 @media screen and (max-width: 1024px) {
@@ -172,6 +182,14 @@
     .d-half-column {
         width: 100%;
         display: block;
+    }
+
+    #contact-column-left {
+        padding-top: 1rem;
+    }
+
+    #contact-column-right {
+        padding-top: 1rem;
     }
 }
 
